<resources>
    <string name="app_name">Alumni Connect</string>
    <string name="register">Daftar</string>
    <string name="nimHint">Nim</string>
    <string name="nameHint">Nama</string>
    <string name="classHint">Kelas</string>
    <string name="emailHint">Email</string>
    <string name="passHint">Password</string>
    <string name="textLogin">Sudah Memiliki Akun?</string>
    <string name="loginBtnText"><u>Masuk Disini</u></string>
    <string name="required">Harap Diisi Kolom Yang Kosong</string>
    <string name="login">Masuk</string>
    <string name="textRegister">Belum Memiliki Akun?</string>
    <string name="registerBtnText"><u>Daftar Disini</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <string name="profileText">PROFILE PENGGUNA</string>
    <string name="logout">LOG OUT</string>
    <string name="aboutApp">TENTANG APLIKASI</string>
    <string name="about">
        <![CDATA[
        Selamat datang di <b>AlumniConnect!</b> Kami di sini untuk membantu Anda dengan cara yang mudah dan menyenangkan dalam mengelola dan memperbarui informasi alumni. Dengan berbagai fitur menarik, Anda bisa terhubung lagi dengan teman lama, memperluas jaringan profesional Anda, dan memastikan informasi alumni tetap up-to-date. Ayo, jalin kembali hubungan berharga Anda dan nikmati pengalaman ini bersama kami!
        ]]>
    </string>
    <string name="image_desc">gambar Berita</string>
    <string name="example20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n</string>
    <string name="example50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="alumniText">Data Alumni</string>
    <string name="addDataText">Tambah Data</string>
    <string name="logoutText">Log Out</string>
    <string name="alumniAddTitle">Pendataan Alumni</string>
    <string name="birthPlaceHint">Tempat Lahir</string>
    <string name="birthDateHint">Tanggal Lahir</string>
    <string name="addressHint">Alamat</string>
    <string name="religionHint">Agama</string>
    <string name="phoneNumberHint">Nomor Telepon</string>
    <string name="joinYearHint">Tahun Masuk</string>
    <string name="graduateYearHint">Tahun Lulus</string>
    <string name="jobHint">Pekerjaan</string>
    <string name="positionHint">Jabatan</string>
    <string name="save">Simpan Data</string>
    <string name="confirmLogin">Gagal Masuk. Harap cek kembali email dan password yang anda masukkan!</string>
    <string name="loginSuccess">Login successful</string>
    <string name="title_news_top">Berita Seputar Alumni</string>
    <string name="title_home_top">Selamat Datang</string>
    <string name="nimAlumni">NIM :</string>
    <string name="nameAlumni">NAMA :</string>
    <string name="delete">hapus data</string>
    <string name="update">update data</string>
    <string name="alumniDetailTitle">Data Alumni</string>
</resources>